--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>OpenMind</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" type='text/css' href='{{ url_for('static', filename='css/main.css') }}' >
+		<link rel="stylesheet" type='text/css' href='{{ url_for('static', filename='templates/assets/css/main.css') }}' >
 		<noscript><link rel="stylesheet" href='{{url_for( 'static', filename='css/noscript.css') }}' /></noscript>
 		<link rel="icon" type="image/x-icon" href='{{url_for('static', filename='images/favicon.ico')}}'>
 	</head>
